--- a/PVB Stage Applicatie/Views/Docent/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Edit.cshtml
@@ -1,8 +1,8 @@
 ﻿@model PVB_Stage_Applicatie.Models.Persoonsgegevens
 @section zijMenu{
-        <li>
-            @Html.ActionLink("Terug", "Index")
-        </li>
+    <li>
+        @Html.ActionLink("Terug", "Index")
+    </li>
 }
 <script>
     $(document).ready(function () {
@@ -30,119 +30,141 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Persoonsgegevens</legend>
-
-        @Html.HiddenFor(model => model.PersoonsgegevensID)
-        @Html.HiddenFor(model => model.Voornaam)
-        @Html.HiddenFor(model => model.Achternaam)
-        @Html.HiddenFor(model => model.Tussenvoegsel)
-        @Html.HiddenFor(model => model.MedewerkerID)
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Voornaam)
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>Bewerken</h3>
         </div>
-        <div class="editor-field">
-            @Html.DisplayFor(model => model.Voornaam)
-        </div>
+        <div class="panel-body">
 
-        <div class="editor-label">
+            <div class="col-md-12">
+                <table class="table table-striped">
+
+                    @Html.HiddenFor(model => model.PersoonsgegevensID)
+                    @Html.HiddenFor(model => model.Voornaam)
+                    @Html.HiddenFor(model => model.Achternaam)
+                    @Html.HiddenFor(model => model.Tussenvoegsel)
+                    @Html.HiddenFor(model => model.MedewerkerID)
+                    <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.Voornaam)
+                    </td>
+                    <td class="editor-field">
+                        @Html.DisplayFor(model => model.Voornaam)
+                    </td>
+                    </tr>
+    <tr>
+        <td class="editor-label">
             @Html.LabelFor(model => model.Achternaam)
-        </div>
-        <div class="editor-field">
+        </td>
+        <td class="editor-field">
             @Html.DisplayFor(model => model.Achternaam)
-        </div>
-
-        <div class="editor-label">
+        </td>
+    </tr>
+    <tr>
+        <td class="editor-label">
             @Html.LabelFor(model => model.Tussenvoegsel)
-        </div>
-        <div class="editor-field">
+        </td>
+        <td class="editor-field">
             @Html.DisplayFor(model => model.Tussenvoegsel)
-        </div>
-
-        <div class="editor-label">
+        </td>
+    </tr>
+    <tr>
+        <td class="editor-label">
             @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
+        </td>
+        <td class="editor-field">
             @Html.EditorFor(model => model.Email)
             @Html.ValidationMessageFor(model => model.Email)
-        </div>
-
-        <div class="editor-label">
+        </td>
+    </tr>
+    <tr>
+        <td class="editor-label">
             @Html.LabelFor(model => model.Straat)
-        </div>
-        <div class="editor-field">
+        </td>
+        <td class="editor-field">
             @Html.EditorFor(model => model.Straat)
             @Html.ValidationMessageFor(model => model.Straat)
-        </div>
-
-        <div class="editor-label">
+        </td>
+    </tr>
+    <tr>
+        <td class="editor-label">
             @Html.LabelFor(model => model.Huisnummer)
-        </div>
-        <div class="editor-field">
+        </td>
+        <td class="editor-field">
             @Html.EditorFor(model => model.Huisnummer)
             @Html.ValidationMessageFor(model => model.Huisnummer)
-        </div>
-
-        <div class="editor-label">
+        </td>
+    </tr>
+    <tr>
+        <td class="editor-label">
             @Html.LabelFor(model => model.Toevoeging)
-        </div>
-        <div class="editor-field">
+        </td>
+        <td class="editor-field">
             @Html.EditorFor(model => model.Toevoeging)
             @Html.ValidationMessageFor(model => model.Toevoeging)
-        </div>
-
-        <div class="editor-label">
+        </td>
+    </tr>
+    <tr>
+        <td class="editor-label">
             @Html.LabelFor(model => model.Postcode)
-        </div>
-        <div class="editor-field">
+        </td>
+        <td class="editor-field">
             @Html.EditorFor(model => model.Postcode)
             @Html.ValidationMessageFor(model => model.Postcode)
-        </div>
-
-        <div class="editor-label">
+        </td>
+    </tr>
+    <tr>
+        <td class="editor-label">
             @Html.LabelFor(model => model.Plaats)
-        </div>
-        <div class="editor-field">
+        </td>
+        <td class="editor-field">
             @Html.EditorFor(model => model.Plaats)
             @Html.ValidationMessageFor(model => model.Plaats)
-        </div>
-
-        <div class="editor-label">
+        </td>
+    </tr>
+    <tr>
+        <td class="editor-label">
             @Html.LabelFor(model => model.Actief)
-        </div>
-        <div class="editor-field">
+        </td>
+        <td class="editor-field">
             @Html.EditorFor(model => model.Actief)
             @Html.ValidationMessageFor(model => model.Actief)
-        </div>
-
-        <div class="editor-label">
+        </td>
+    </tr>
+    <tr>
+        <td class="editor-label">
             @Html.LabelFor(model => model.NonActiefReden)
-        </div>
-        <div class="editor-field">
+        </td>
+        <td class="editor-field">
             @Html.EditorFor(model => model.NonActiefReden)
             @Html.ValidationMessageFor(model => model.NonActiefReden)
-        </div>
-
-        <div class="editor-label">
+        </td>
+    </tr>
+    <tr>
+        <td class="editor-label">
             @Html.LabelFor(model => model.MedewerkerID)
-        </div>
-        <div class="editor-field">
+        </td>
+        <td class="editor-field">
             @Html.DisplayFor(model => model.MedewerkerID)
             @Html.ValidationMessageFor(model => model.MedewerkerID)
+        </td>
+    </tr>
+                    <tr>
+                        <td>
+                            <input type="submit" value="Save" />
+                        </td>
+                        <td>@Html.Encode(ViewData["Foutmelding"])</td>
+                    </tr>
+                </table>
+            </div>
         </div>
-        <p>
-            <input type="submit" value="Save" />
-        <p>@Html.Encode(ViewData["Foutmelding"])</p>
-
-    </fieldset>
+    </div>
 }
 
 
