--- a/PVB Stage Applicatie/Views/Stagiair/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Stagiair/Create.cshtml
@@ -2,8 +2,7 @@
 <script>
     $(document).ready(function (event) {
         $('form').on('submit', function () {
-            if($("#StudentNummer")[0].value == "")
-            {
+            if ($("#StudentNummer")[0].value == "") {
                 $("#StudentNummerMessage")[0].innerHTML = "OEPSIE";
                 event.preventDefault();
             }
@@ -15,121 +14,146 @@
     ViewBag.Title = "Create";
 }
 @section zijMenu{
-        <li>
-            @Html.ActionLink("Terug", "Index")
-        </li>
+    <li>
+        @Html.ActionLink("Terug", "Index")
+    </li>
 
 }
 <h2>Create</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>Bewerken</h3>
+        </div>
+        <div class="panel-body">
 
-    <fieldset>
-        <legend>Persoonsgegevens</legend>
+            <div class="col-md-12">
+                <table class="table table-striped">
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Voornaam)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Voornaam)
+                            @Html.ValidationMessageFor(model => model.Voornaam)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Achternaam)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Achternaam)
+                            @Html.ValidationMessageFor(model => model.Achternaam)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Tussenvoegsel)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Tussenvoegsel)
+                            @Html.ValidationMessageFor(model => model.Tussenvoegsel)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Email)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Email)
+                            @Html.ValidationMessageFor(model => model.Email)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Straat)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Straat)
+                            @Html.ValidationMessageFor(model => model.Straat)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Huisnummer)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Huisnummer)
+                            @Html.ValidationMessageFor(model => model.Huisnummer)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Toevoeging)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Toevoeging)
+                            @Html.ValidationMessageFor(model => model.Toevoeging)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Postcode)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Postcode)
+                            @Html.ValidationMessageFor(model => model.Postcode)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Plaats)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Plaats)
+                            @Html.ValidationMessageFor(model => model.Plaats)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.StudentNummer)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.StudentNummer)
+                            @Html.ValidationMessageFor(model => model.StudentNummer, "", new { id = "studentNummerMessage" })
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Opleiding)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Opleiding)
+                            @Html.ValidationMessageFor(model => model.Opleiding)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Opleidingsniveau)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Opleidingsniveau)
+                            @Html.ValidationMessageFor(model => model.Opleidingsniveau)
+                        </td>
+                        </tr>
+                    <tr>
+                        <td>
+                            <input type="submit" class="btn btn-lg btn-default" value="Opslaan" />
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Voornaam)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Voornaam)
-            @Html.ValidationMessageFor(model => model.Voornaam)
-        </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Achternaam)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Achternaam)
-            @Html.ValidationMessageFor(model => model.Achternaam)
-        </div>
+</td>
+                        <td>@Html.Encode(ViewData["Foutmelding"])</td>
+                    </tr>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Tussenvoegsel)
+</table>
+            </div>
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Tussenvoegsel)
-            @Html.ValidationMessageFor(model => model.Tussenvoegsel)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Straat)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Straat)
-            @Html.ValidationMessageFor(model => model.Straat)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Huisnummer)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Huisnummer)
-            @Html.ValidationMessageFor(model => model.Huisnummer)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Toevoeging)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Toevoeging)
-            @Html.ValidationMessageFor(model => model.Toevoeging)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Postcode)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Postcode)
-            @Html.ValidationMessageFor(model => model.Postcode)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Plaats)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Plaats)
-            @Html.ValidationMessageFor(model => model.Plaats)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.StudentNummer)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.StudentNummer)
-            @Html.ValidationMessageFor(model => model.StudentNummer, "", new { id = "studentNummerMessage"  })
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Opleiding)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Opleiding)
-            @Html.ValidationMessageFor(model => model.Opleiding)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Opleidingsniveau)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Opleidingsniveau)
-            @Html.ValidationMessageFor(model => model.Opleidingsniveau)
-        </div>
-        <p>
-            <input type="submit" value="Create" />
-        </p>
-        <p>@Html.Encode(ViewData["Foutmelding"])</p>
-
-    </fieldset>
+    </div>
 }
 
 
