--- a/PVB Stage Applicatie/Views/Stagiair/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Stagiair/Details.cshtml
@@ -5,135 +5,145 @@
 }
 
 @section ZijMenu{
-        @if(User.IsInRole("Beheerder"))
-        {
-        <li>@Html.ActionLink("Edit", "Edit", new { id = Model.PersoonsgegevensID }) </li>
-        }
 <li>@Html.ActionLink("Back to List", "Index") </li>
+
+    @if (User.IsInRole("Beheerder"))
+    {
+        <li>@Html.ActionLink("Edit", "Edit", new { id = Model.PersoonsgegevensID }) </li>
+    }
 }
 
-<h2>Details</h2>
-    
-<fieldset class="details-field">
-    <legend>Persoonsgegevens</legend>
 
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Rol)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Rol)
-    </div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3>Medewerkers</h3>
 
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Voornaam)
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Voornaam)
+    <div class="panel-body">
+        <div class="col-md-12">
+            <table class="table table-striped">
+                <tr>
+                <td class="display-label">
+                    @Html.DisplayNameFor(model => model.Rol)
+                </td>
+                <td class="display-field">
+                    @Html.DisplayFor(model => model.Rol)
+                </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Voornaam)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Voornaam)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Achternaam)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Achternaam)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Tussenvoegsel)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Tussenvoegsel)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Email)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Email)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Straat)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Straat)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Huisnummer)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Huisnummer)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Toevoeging)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Toevoeging)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Postcode)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Postcode)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Plaats)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Plaats)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Actief)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Actief)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.NonActiefReden)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.NonActiefReden)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.StudentNummer)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.StudentNummer)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Opleiding)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Opleiding)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Opleidingsniveau)
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Opleidingsniveau)
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Achternaam)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Achternaam)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Tussenvoegsel)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Tussenvoegsel)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Email)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Email)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Straat)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Straat)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Huisnummer)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Huisnummer)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Toevoeging)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Toevoeging)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Postcode)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Postcode)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Plaats)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Plaats)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Actief)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Actief)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.NonActiefReden)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.NonActiefReden)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.MedewerkerID)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.MedewerkerID)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.StudentNummer)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.StudentNummer)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Opleiding)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Opleiding)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Opleidingsniveau)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Opleidingsniveau)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Bedrijf1.Naam)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Bedrijf1.Naam)
-    </div>
-</fieldset>
+</div>
 
