Datums moeten niet zo moeilijk doen man

--- a/PVB Stage Applicatie/Views/Docent/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Index.cshtml
@@ -10,7 +10,7 @@
 <h2>Index</h2>
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3>Bedrijven</h3>
+        <h3>Docenten</h3>
     </div>
     <div class="panel-body">
 
