--- a/PVB Stage Applicatie/Views/Docent/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Details.cshtml
@@ -19,7 +19,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3>Docent</h3>
+        <h3>@Html.DisplayFor(model => model.Voornaam) @Html.DisplayFor(model => model.Tussenvoegsel) @Html.DisplayFor(model => model.Achternaam)</h3>
 
         </div>
         <div class="panel-body">
